Fix project image overlay box z-index

--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -53,7 +53,7 @@
     width: 100%;
     height: 100%;
     background-color: rgba(0,0,0,0.2);
-    z-index: 10;
+    /* z-index: 10; */
 }
 
 /* .title {
